Fixed wrap attribute to flex attribute in styles.css

--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ section {
 
 .colHobbies {
     display: block;
-    flex-direction: wrap;
+    flex-direction: row;
     align-items: center;
     flex-direction: column;
  }
